# multi_ocr

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit-checks.yml  publish.yml
src/multi_ocr/: __init__.py  __main__.py  _config.py  _ocr_models.py  _version.py  config.py
src/multi_ocr/models/: base_ocr_model.py  numarkdown_ocr_model.py
tests/: conftest.py  test_cli.py  test_config.py  test_factory.py  test_ocr_models.py
