[project]
name = "multi-ocr"
dynamic = ["version"]
description = "Provides a unified interface for multiple OCR models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "loguru>=0.7.3",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers[torch]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/vnniciusg/multi_ocr"
Repository = "https://github.com/vnniciusg/multi_ocr"
Issues = "https://github.com/vnniciusg/multi_ocr/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/multi_ocr/_version.py"

[tool.uv]
package = true

[project.scripts]
multi-ocr = "multi_ocr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_ocr"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLC0415"]
"src/multi_ocr/__main__.py" = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "mypy>=1.14.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
